[package]
name = "git-subset"
version = "0.1.1"
authors = ["Jason White"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jasonwhite/git-subset"
documentation = "https://github.com/jasonwhite/git-subset"
homepage = "https://github.com/jasonwhite/git-subset"
description = """
Super fast Git tree filtering.
"""
keywords = ["git", "filter-branch", "tree"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
git2 = "0.11"
structopt = "0.3"
